[tool.poetry]
name = "seaborn_tutorial"
version = "0.1.0"
description = ""
authors = ["rich <rkba2@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
tcl = "^0.2"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
